Fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
    <title>Cristian Parra</title>
    <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
 <body>
 	<header>
@@ -16,7 +16,7 @@
 				<li class="nav-links" id="nav--link-start"><button id="nav-button">Hire Me<span class="material-symbols-outlined nav--button-icon">work</span></button></li>
 				<li class="nav-links" id="nav--link-center"><a id="logo" href="index.html">Cristian Parra</a></li>
 				<li class="nav-links" id="nav--link-end">More</li>
-			<ul>
+			</ul>
 		</nav>
 	</header>
    <main>
