Fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<section id="hero">
 			<div class="profile--pic-area">
 				<div class="profile--pic-background"></div>
-				<img class="profile-pic" src="images/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture." />
+				<img class="profile-pic" src="images/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture.">
 			</div>
 			<div id="lp-calltoaction">
 			<h1 id="lp--hero-text">Hey, I'm Cristian. Freelance Web Developer and Virtual Assistant from Orlando, Florida.</h1>
@@ -62,16 +62,16 @@
 				<h2 id="contact--form-heading">Contact Me</h2>
 				<button class="unit" type="button" id="contact--form-exit"><span class="material-symbols-outlined">close</span></button>
 				<label id="name">
-					<input type="text" placeholder="First and Last Name" />
+					<input type="text" placeholder="First and Last Name">
 				</label>
 				<label id="e-mail">
-					<input type="email" placeholder="E-mail" />
+					<input type="email" placeholder="E-mail">
 				</label>
 				<label id="phone">
-					<input type="text" placeholder="Contact Number" />
+					<input type="text" placeholder="Contact Number">
 				</label>
 				<label id="website">
-					<input type="text" placeholder="Your Website" />
+					<input type="text" placeholder="Your Website">
 				</label>
 				<label id="message">
 					<textarea placeholder="Message Me Here" rows="3"></textarea>
