--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+	<meta charset="utf-8">
+   <meta name="viewport" content="width=device-width">
 </head>
 <body>
 	<header>
@@ -26,7 +28,7 @@
 		<section id="hero">
 			<div class="profile--pic-area">
 				<div class="profile--pic-background"></div>
-				<img class="profile-pic" src="images/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture.">
+				<img class="profile-pic" src="images/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture." height="294px" width="294px">
 			</div>
 			<div id="lp-calltoaction">
 			<h1 id="lp--hero-text">Hey, I'm Cristian. Freelance Web Developer and Virtual Assistant from Orlando, Florida.</h1>
@@ -77,30 +79,9 @@
 					<textarea placeholder="Message Me Here" rows="3"></textarea>
 				</label>
 				<button class="submit" id="contact--form-submit" type="button">Submit and Send</button>
-<!--				
-
-<button class="submit" type="button">
-<i class="icon ion-md-lock"></i> Log in
-</button>
-<button class="unit" type="button">
-<i class="icon ion-md-arrow-back"></i>
-</button>
-<button class="unit" type="button">
-<i class="icon ion-md-bookmark"></i>
-</button>
-<button class="unit" type="button">
-<i class="icon ion-md-settings"></i>
-</button>
-<div class="input-group">
-<label>
-<input type="text" placeholder="Email Address" />
-</label>
-<button class="unit" type="button">
-<i class="icon ion-md-search"></i>
-</button>
--->
 			</form>
 		</section>
-    </main>
+		<section>
+	</main>
 </body>
 </html>
