--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<section id="hero">
 			<div class="profile--pic-area">
 				<div class="profile--pic-background"></div>
-				<img class="profile-pic" src="images/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture." height="294px" width="294px">
+				<img class="profile-pic" src="images/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture." height="294" width="294">
 			</div>
 			<div id="lp-calltoaction">
 			<h1 id="lp--hero-text">Hey, I'm Cristian. Freelance Web Developer and Virtual Assistant from Orlando, Florida.</h1>
@@ -82,6 +82,7 @@
 			</form>
 		</section>
 		<section>
+		</section>
 	</main>
 </body>
 </html>
