updates to meta

--- a/index.html
+++ b/index.html
@@ -1,88 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <title>Cristian Parra</title>
-   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-	<link rel="preconnect" href="https://fonts.googleapis.com"> 
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-	<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-	<meta charset="utf-8">
-   <meta name="viewport" content="width=device-width">
-</head>
-<body>
-	<header>
-		<nav>
-			<ul id="nav-list">
-				<li class="nav-links" id="nav--link-start"><button id="nav-button">Hire Me<span class="material-symbols-outlined nav--button-icon">work</span></button></li>
-				<li class="nav-links" id="nav--link-center"><a id="logo" href="index.html">Cristian Parra</a></li>
-				<li class="nav-links" id="nav--link-end">More</li>
-			</ul>
-		</nav>
-	</header>
-   <main>
-   	<div id="stars"></div>
-     	<div id="stars2"></div>
-     	<div id="stars3"></div>
-		<section id="hero">
-			<div class="profile--pic-area">
-				<div class="profile--pic-background"></div>
-				<img class="profile-pic" src="images/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture." height="294" width="294">
-			</div>
-			<div id="lp-calltoaction">
-			<h1 id="lp--hero-text">Hey, I'm Cristian. Freelance Web Developer and Virtual Assistant from Orlando, Florida.</h1>
-			<p id="lp--hero-subtext">Let's Work Together<span class="material-symbols-outlined hero--subtext-icon">navigate_next</span></p>
-			</div>
-		</section>
-		<section id="services">
-			<h2 class="section-heading" id="services-heading">Services</h2>
-			<div class="service" id="it-webdev">
-				<h3>IT and Web Development</h3>
-				<span class="material-symbols-outlined service-icon">web</span>
-				<p>I offer high-quality web design and development for small businesses or personal websites</p>
-			</div>
-			<div class="service" id="travel-planning">	
-				<h3>Travel Planning</h3>
-				<span class="material-symbols-outlined service-icon">travel_explore</span>
-				<p>Traveling doesn't have to be stressful. Plan your dream vacations, hassle-free, with me</p>
-			</div>
-			<div class="service">
-				<h3>Translation and Editing</h3>
-				<span class="material-symbols-outlined service-icon">translate</span>
-				<p>My language services ensures your business can communicate effectively in several different languages</p>
-			</div>
-			<div class="service">
-				<h3>Virtual Assistant Services</h3>
-				<span class="material-symbols-outlined service-icon">headset_mic</span>
-				<p>I help you take control of the chaos in your life by taking care of tasks you DONT want to do every day
-			</div>
-		</section>
-		<section id="contact">
-			<form>
-				<button class="unit" type="button" id="contact--form-back"><span class="material-symbols-outlined icon--less-weight">arrow_back_ios</span></button>
-				<h2 id="contact--form-heading">Contact Me</h2>
-				<button class="unit" type="button" id="contact--form-exit"><span class="material-symbols-outlined">close</span></button>
-				<label id="name">
-					<input type="text" placeholder="First and Last Name">
-				</label>
-				<label id="e-mail">
-					<input type="email" placeholder="E-mail">
-				</label>
-				<label id="phone">
-					<input type="text" placeholder="Contact Number">
-				</label>
-				<label id="website">
-					<input type="text" placeholder="Your Website">
-				</label>
-				<label id="message">
-					<textarea placeholder="Message Me Here" rows="3"></textarea>
-				</label>
-				<button class="submit" id="contact--form-submit" type="button">Submit and Send</button>
-			</form>
-		</section>
-		<section>
-		</section>
-	</main>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Web development and development including other online virtual services">
+  		<meta name="keywords" content="HTML, CSS, JavaScript, SEO, Virtual Assistant, Translation, editing">
+  		<meta name="author" content="Cristian Parra">
+   	<title>Cristian Parra</title>
+		<link type="text/css" rel="stylesheet" href="assets/styles/normalize.css">
+   	<link rel="stylesheet" type="text/css" href="assets/styles/stylesheet.css">
+   	<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+		<link rel="preconnect" href="https://fonts.googleapis.com"> 
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+		<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+	</head>
+	<body>
+		<header>
+			<nav class="main-nav">
+				<a id="upwork-link" href="https://www.upwork.com/freelancers/~0158ba329a67b9d68c">Hire Me<span class="material-symbols-outlined nav--button-icon">work</span></a>
+				<button id="contact--form-button">Send me a message</button>
+				<a id="logo" href="index.html">Cristian Parra</a>
+				<a id="more-link" href="">More</a>
+			</nav>
+		</header>
+   	<main>
+   		<div id="stars"></div>
+     		<div id="stars2"></div>
+     		<div id="stars3"></div>
+			<section id="hero">
+				<div class="profile--pic-area">
+					<div class="profile--pic-background" id="profile--pic-background"></div>
+					<img class="profile-pic" src="assets/img/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture." height="294" width="294">
+				</div>
+				<div id="lp-calltoaction">
+					<h1 id="lp--hero-text">Hey, I'm Cristian. Freelance Web Developer and Virtual Assistant from Orlando, Florida.</h1>
+					<p id="lp--hero-subtext">Let's Work Together<span class="material-symbols-outlined hero--subtext-icon">navigate_next</span></p>
+				</div>
+			</section>
+			<section id="services">
+				<h2 class="section-heading" id="services-heading">Services</h2>
+				<div class="service" id="it-webdev">
+					<h3>IT and Web Development</h3>
+					<span class="material-symbols-outlined service-icon">web</span>
+					<p>I offer high-quality web design and development for small businesses or personal websites</p>
+				</div>
+				<div class="service" id="travel-planning">
+					<h3>Page Speed and SEO</h3>
+					<span class="material-symbols-outlined service-icon">query_stats</span>
+					<p>Make the Internet faster for billions of people and get a targeted audience for your content, today</p>
+				</div>
+				<div class="service">
+					<h3>Translation and Editing</h3>
+					<span class="material-symbols-outlined service-icon">translate</span>
+					<p>My language services ensures your business can communicate effectively in several different languages</p>
+				</div>
+				<div class="service">
+					<h3>Virtual Assistant Services</h3>
+					<span class="material-symbols-outlined service-icon">headset_mic</span>
+					<p>I help you take control of the chaos in your life by taking care of tasks you DONT want to do every day
+				</div>
+			</section>
+			<section id="about">
+				<h2 class="section-heading" id="about-heading">About</h2>
+				<p id="about--para-1">Hi there! My name is Cristian Parra and I'm from Orlando, Florida. I've been traveling and living in Europe for the past 7 years. I first moved to Albania when I was 24, then traveled to Kosovo where I spent most of my time before moving around Western Europe to live in various countries for months at a time. Some of those countries include; Sweden (7 months), United Kingdom (2 months) and France (3 months).</p>
+				<p id="about--para-2">I've always loved learning new things, tasting different foods and discovering new cultures. I also enjoy playing Civilization 6 and reading books. I want to maximize your success as a business owner or company manager so that you can live the life of your dreams. I want to help you make the right decisions for your company's future so that we can work together to see you achieve all of your goals!</p>
+			</section>
+			<section id="contact">
+				<h2 class="section-heading" id="contact-heading">Contact</h2>
+				<div id="my-phone">
+					<h3>Phone:</h3>
+					<p>+1 - 407 - 603 - 0641<p>
+				</div>
+				<div id="my-email">
+					<h3>Email:</h3>
+					<p>admin@cristianparra.com</p>
+				</div>
+				<video id="contact-vid" src="assets/vid/earth.mp4" muted autoplay loop></video>
+				<form id="contact-form" "action="/my-contact-form-page" method="post">
+					<h2 id="contact--form-heading">Message Me</h2>
+					<button class="unit" type="button" id="contact--form-exit"><span class="material-symbols-outlined">close</span></button>
+					<label id="name">
+						<input type="text" placeholder="First and Last Name">
+					</label>
+					<label id="e-mail">
+						<input type="email" placeholder="E-mail">
+					</label>
+					<label id="phone">
+						<input type="text" placeholder="Contact Number">
+					</label>
+					<label id="website">
+						<input type="text" placeholder="Your Website">
+					</label>
+					<label id="message">
+						<textarea placeholder="Message Me Here" rows="3"></textarea>
+					</label>
+					<button class="submit" id="contact--form-submit" type="button">Submit & Send</button>
+				</form>
+			</section>
+		</main>
+		<footer>
+			<p>Designed and developed by Cristian Parra. All rights reserved. Copyright 2022</p>
+		</footer>
+		<script src="assets/scripts/main.js"></script>
+	</body>
 </html>
