changed phone number color

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="format-detection" content="telephone=no">
 		<meta name="description" content="Web development and development including other online virtual services">
   		<meta name="keywords" content="HTML, CSS, JavaScript, SEO, Virtual Assistant, Translation, editing">
   		<meta name="author" content="Cristian Parra">
