--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 				<a id="more-link" href="">More</a>
 			</nav>
 		</header>
+		<div id="stars"></div>
+     	<div id="stars2"></div>
+     	<div id="stars3"></div>
    	<main>
-   		<div id="stars"></div>
-     		<div id="stars2"></div>
-     		<div id="stars3"></div>
 			<section id="hero">
 				<div class="profile--pic-area">
 					<div class="profile--pic-background" id="profile--pic-background"></div>
@@ -65,7 +65,7 @@
 			<section id="about">
 				<h2 class="section-heading" id="about-heading">About</h2>
 				<p id="about--para-1">Hi there! My name is Cristian Parra and I'm from Orlando, Florida. I've been traveling and living in Europe for the past 7 years. I first moved to Albania when I was 24, then traveled to Kosovo where I spent most of my time before moving around Western Europe to live in various countries for months at a time. Some of those countries include; Sweden (7 months), United Kingdom (2 months) and France (3 months).</p>
-				<p id="about--para-2">I've always loved learning new things, tasting different foods and discovering new cultures. I also enjoy playing Civilization 6 and reading books. I want to maximize your success as a business owner or company manager so that you can live the life of your dreams. I want to help you make the right decisions for your company's future so that we can work together to see you achieve all of your goals!</p>
+				<p id="about--para-2">I've always loved learning new things, tasting different foods and discovering new cultures. I also enjoy playing Civilization 6 and reading books. I want to maximize your success as a business owner or company manager so that you can live the life of your dreams. I want to help you make the right decisions for your company's future so that we can work together to see you achieve all of your goals! Let's work together!</p>
 			</section>
 			<section id="contact">
 				<h2 class="section-heading" id="contact-heading">Contact</h2>
@@ -77,7 +77,8 @@
 					<h3>Email:</h3>
 					<p>admin@cristianparra.com</p>
 				</div>
-				<video id="contact-vid" src="assets/vid/earth.mp4" muted autoplay loop></video>
+				<div id="overlay"></div>
+				<video id="contact-vid" src="assets/vid/earth.mp4" muted controls loop></video>
 				<form id="contact-form" "action="/my-contact-form-page" method="post">
 					<h2 id="contact--form-heading">Message Me</h2>
 					<button class="unit" type="button" id="contact--form-exit"><span class="material-symbols-outlined">close</span></button>
