--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<h3>Email:</h3>
 					<p>admin@cristianparra.com</p>
 				</div>
-				<video id="contact-vid" src="assets/vid/earth.mp4" muted controls playsinline loop></video>
+				<video id="contact-vid" src="assets/vid/earth.mp4" muted autoplay playsinline loop></video>
 				<form id="contact-form" "action="/my-contact-form-page" method="post">
 					<h2 id="contact--form-heading">Message Me</h2>
 					<button class="unit" type="button" id="contact--form-exit"><span class="material-symbols-outlined">close</span></button>
