--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 		<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+
 	</head>
 	<body>
 		<header>
@@ -78,31 +80,31 @@
 					<p>admin@cristianparra.com</p>
 				</div>
 				<video id="contact-vid" src="assets/vid/earth.mp4" muted autoplay playsinline loop></video>
-				<form id="contact-form" "action="/my-contact-form-page" method="post">
+				<form id="contact-form" action="https://formspree.io/f/xrgvgodj" method="POST">
 					<h2 id="contact--form-heading">Message Me</h2>
 					<button class="unit" type="button" id="contact--form-exit"><span class="material-symbols-outlined">close</span></button>
 					<label id="name">
-						<input type="text" placeholder="First and Last Name">
+						<input type="text" name="name" placeholder="First and Last Name">
 					</label>
 					<label id="e-mail">
-						<input type="email" placeholder="E-mail">
+						<input type="email" name="email" placeholder="E-mail">
 					</label>
 					<label id="phone">
-						<input type="text" placeholder="Contact Number">
+						<input type="text" name="phone" placeholder="Contact Number">
 					</label>
 					<label id="website">
-						<input type="text" placeholder="Your Website">
+						<input type="text" name="website" placeholder="Your Website">
 					</label>
 					<label id="message">
-						<textarea placeholder="Message Me Here" rows="3"></textarea>
+						<textarea placeholder="Message Me Here" name="message" rows="3"></textarea>
 					</label>
 					<button class="submit" id="contact--form-submit" type="button">Submit & Send</button>
 				</form>
 			</section>
 		</main>
-		<footer>
+		<footer id="footer">
 			<p>Designed and developed by Cristian Parra. All rights reserved. Copyright 2022</p>
 		</footer>
 		<script src="assets/scripts/main.js"></script>
 	</body>
-</html>
+	</html>
