--- a/index.html
+++ b/index.html
@@ -15,21 +15,18 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 		<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
-<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 
 	</head>
 	<body>
-		<header>
-			<nav class="main-nav">
-				<a id="upwork-link" href="https://www.upwork.com/freelancers/~0158ba329a67b9d68c">Hire Me<span class="material-symbols-outlined nav--button-icon">work</span></a>
-				<button id="contact--form-button">Send me a message</button>
-				<a id="logo" href="index.html">Cristian Parra</a>
-				<a id="more-link" href="">More</a>
-			</nav>
-		</header>
 		<div id="stars"></div>
      	<div id="stars2"></div>
      	<div id="stars3"></div>
+		<header>
+			<nav id="main-nav">
+				<button id="contact-cta">Message Me</button>
+				<a id="logo" href="index.html">Cristian Parra</a>
+			</nav>
+		</header>
    	<main>
 			<section id="hero">
 				<div class="profile--pic-area">
@@ -38,7 +35,6 @@
 				</div>
 				<div id="lp-calltoaction">
 					<h1 id="lp--hero-text">Hey, I'm Cristian. Freelance Web Developer and Virtual Assistant from Orlando, Florida.</h1>
-					<p id="lp--hero-subtext">Let's Work Together<span class="material-symbols-outlined hero--subtext-icon">navigate_next</span></p>
 				</div>
 			</section>
 			<section id="services">
@@ -66,18 +62,25 @@
 			</section>
 			<section id="about">
 				<h2 class="section-heading" id="about-heading">About</h2>
-				<p id="about--para-1">Hi there! My name is Cristian Parra and I'm from Orlando, Florida. I've been traveling and living in Europe for the past 7 years. I first moved to Albania when I was 24, then traveled to Kosovo where I spent most of my time before moving around Western Europe to live in various countries for months at a time. Some of those countries include; Sweden (7 months), United Kingdom (2 months) and France (3 months).</p>
-				<p id="about--para-2">I've always loved learning new things, tasting different foods and discovering new cultures. I also enjoy playing Civilization 6 and reading books. I want to maximize your success as a business owner or company manager so that you can live the life of your dreams. I want to help you make the right decisions for your company's future so that we can work together to see you achieve all of your goals! Let's work together!</p>
+				<div id="about--para-1">
+					<p>Hi there! My name is Cristian Parra, and I come from Orlando, Florida. For the past 7 years, I've been living and traveling in Europe, learning new things along the way. I've lived in Albania, Kosovo, Montenegro, Sweden, the UK, and France, immersing myself in the local cultures and cuisines. Great times.
+</p>
+				</div>
+				<div id="about--para-2">
+					<p>As a business owner and company manager, my goal is to help you maximize your success and achieve all of your goals. I believe that by working together, we can make the right decisions for your company's future and help you live the life of your dreams. Let's work together and make it happen!</p>
+				</div>
 			</section>
 			<section id="contact">
 				<h2 class="section-heading" id="contact-heading">Contact</h2>
-				<div id="my-phone">
-					<h3>Phone:</h3>
-					<p>+1 - 407 - 603 - 0641<p>
-				</div>
-				<div id="my-email">
-					<h3>Email:</h3>
-					<p>admin@cristianparra.com</p>
+				<div id="contact-info">
+					<div id="my-phone">
+						<h3>Phone:</h3>
+						<p>+1 - 407 - 603 - 0641<p>
+					</div>
+					<div id="my-email">
+						<h3>Email:</h3>
+						<p>admin@cristianparra.com</p>
+					</div>
 				</div>
 				<video id="contact-vid" src="assets/vid/earth.mp4" muted autoplay playsinline loop></video>
 				<form id="contact-form" action="https://formspree.io/f/xrgvgodj" method="POST">
@@ -107,4 +110,4 @@
 		</footer>
 		<script src="assets/scripts/main.js"></script>
 	</body>
-	</html>
+</html>
