--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<label id="message">
 						<textarea placeholder="Message Me Here" name="message" rows="3"></textarea>
 					</label>
-					<button class="submit" id="contact--form-submit" type="button">Submit & Send</button>
+					<button class="submit" id="contact--form-submit" type="submit">Submit & Send</button>
 				</form>
 			</section>
 		</main>
