Added lazy loading

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<section id="hero">
 				<div class="profile--pic-area">
 					<div class="profile--pic-background" id="profile--pic-background"></div>
-					<img class="profile-pic" src="assets/img/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture." height="294" width="294">
+					<img class="profile-pic" src="assets/img/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture." height="294" loading="lazy" width="294">
 				</div>
 				<div id="lp-calltoaction">
 					<h1 id="lp--hero-text">Hey, I'm Cristian. Freelance Web Developer and Virtual Assistant from Orlando, Florida.</h1>
@@ -82,7 +82,7 @@
 						<p>admin@cristianparra.com</p>
 					</div>
 				</div>
-				<video id="contact-vid" src="assets/vid/earth.mp4" muted autoplay playsinline loop></video>
+				<video loading="lazy" id="contact-vid" src="assets/vid/earth.mp4" muted autoplay playsinline loop></video>
 				<form id="contact-form" action="https://formspree.io/f/xrgvgodj" method="POST">
 					<h2 id="contact--form-heading">Message Me</h2>
 					<button class="unit" type="button" id="contact--form-exit"><span class="material-symbols-outlined">close</span></button>
