Updated phone number

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<div id="contact-info">
 					<div id="my-phone">
 						<h3>Phone:</h3>
-						<p>+1 - 407 - 603 - 0641<p>
+						<p>+1 - 239 - 350 - 6350<p>
 					</div>
 					<div id="my-email">
 						<h3>Email:</h3>
@@ -106,7 +106,7 @@
 			</section>
 		</main>
 		<footer id="footer">
-			<p>Designed and developed by Cristian Parra. All rights reserved. Copyright 2022</p>
+			<p>Designed and developed by Cristian R Parra. All rights reserved. Copyright 2024</p>
 		</footer>
 		<script src="assets/scripts/main.js"></script>
 	</body>
