--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<img class="profile-pic" src="assets/img/profile-pic.jpg" alt="Web Developer, Cristian Parra, posing for a profile picture." height="294" loading="lazy" width="294">
 				</div>
 				<div id="lp-calltoaction">
-					<h1 id="lp--hero-text">Hey, I'm Cristian. Freelance Web Developer and Virtual Assistant from Orlando, Florida.</h1>
+					<h1 id="lp--hero-text">Web Services, Forex Signals and Prop Firm Passing Services.</h1>
 				</div>
 			</section>
 			<section id="services">
