--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="service" id="travel-planning">
 					<h3>Page Speed and SEO</h3>
 					<span class="material-symbols-outlined service-icon">query_stats</span>
-					<p>Make the Internet faster for billions of people and get a targeted audience for your content, today</p>
+					<p>Boost your trading success and reach your financial goals with expert forex signals</p>
 				</div>
 				<div class="service">
 					<h3>Translation and Editing</h3>
