--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<p>I offer high-quality web design and development for small businesses or personal websites</p>
 				</div>
 				<div class="service" id="travel-planning">
-					<h3>Page Speed and SEO</h3>
+					<h3>Forex Signals</h3>
 					<span class="material-symbols-outlined service-icon">query_stats</span>
 					<p>Boost your trading success and reach your financial goals with expert forex signals</p>
 				</div>
